--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,7 +1,7 @@
 <ul>
-
     <li>
-        <a routerLink="/historia">Historia</a>
+        <a routerLink="/historia/1">Historia</a>
     </li>
+
 
 </ul>
